--- a/tasks/tasks.yml
+++ b/tasks/tasks.yml
@@ -10,5 +10,8 @@
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
     - portainer_data:/data
+    network_mode: bridge
+    networks:
+      - name: bridge
     purge_networks: yes
 
