--- a/tasks/tasks.yml
+++ b/tasks/tasks.yml
@@ -3,7 +3,7 @@
 - name: Setup Portainer
   docker_container:
     name: portainer
-    image: "portainer/portainer:{{ docker_portainer_version  | default('1.22.0') }}"
+    image: "{{ docker_portainer_image }}"
     ports:
     - "9000:9000"
     restart_policy: on-failure
